# COSC410-2025-database-mwe

./: .gitignore  README.md
backend/: alembic.ini  pyproject.toml  sqlite3
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: c28b474318d5_initial_schema.py
backend/app/: db.py  main.py  models.py  schemas.py
frontend/: index.html
