[project]
name = "db-mwe-backend"
version = "0.1.0"
description = "Minimal FastAPI + SQLAlchemy + Alembic example"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "pydantic>=2",
  "alembic>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]          # ship the app/ package

[tool.hatch.build.targets.sdist]
include = ["app", "alembic", "alembic.ini", "pyproject.toml", "README.md"]